--- a/app/templates/items_new.html
+++ b/app/templates/items_new.html
@@ -239,7 +239,7 @@ h2 {
 
 
 <h2>Add New Item</h2>
-<a href="/owner/items" class="back-floating"><i class="bi bi-chevron-left"></i></a>
+<a href="/" class="back-floating"><i class="bi bi-chevron-left"></i></a>
 
 
 <form method="post" enctype="multipart/form-data" id="newItemForm">
